Very, very basic user management added, still needs full state management Fixed bug in flash message display Expanded some specs

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,11 +15,12 @@
           %li
             = link_to "Zones", zones_path
           %li
-            Templates
+            = link_to "Templates", templates_path
+          /
+            %li
+              Logs
           %li
-            Logs
-          %li
-            Users
+            = link_to "Users", users_path
           %li
             Search form
           %li
