--- a/app/views/zones/show.html.haml
+++ b/app/views/zones/show.html.haml
@@ -1,17 +1,20 @@
 - @page_title = @zone.name
-%h1.underline= @zone.name
+%h1.underline
+  = @zone.name
+  &nbsp;
+  = image_tag 'database_edit.png'
 
 #domain-name.padded
   %table.grid
     %tr
       %td Domain
       %td= @zone.name
-    %tr
-      %td &nsp;
-      %td= image_tag 'database_edit.png'
 
 #domain-soa.padded
-  %h2.underline SOA Record
+  %h2.underline
+    SOA Record
+    &nbsp;
+    = image_tag 'database_edit.png'
   %table.grid
     %tr
       %td Primary name server
@@ -31,9 +34,6 @@
     %tr
       %td Minimum
       %td= @zone.soa_record.minimum
-    %tr
-      %td &nbsp;
-      %td= image_tag 'database_edit.png'
 
 #domain-records.padded
   %h2.underline Zone records
