Zone and Record Template RESTful controllers and views

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,6 +4,7 @@
     %title
       = page_title
     = stylesheet_link_tag 'application'
+    = javascript_include_tag :defaults
   %body
     #Container
       #Header
