--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,8 +3,8 @@
   %head
     %title
       = page_title
-    = stylesheet_link_tag 'application'
-    = javascript_include_tag :defaults
+    = stylesheet_link_tag 'application', 'prototip'
+    = javascript_include_tag :defaults, 'prototip'
   %body
     #Container
       #Header
@@ -32,7 +32,12 @@
 
         = yield
       #Footer
-        = link_to "BIND DLZ on Rails", "http://www.opensourcery.co.za/bind-dlz-on-rails"
+        = link_to "BIND DLZ on Rails", "http://www.opensourcery.co.za/bind-dlz-on-rails", :target => '_blank'
         \- &copy; Clear Planet Information Solutions (Pty) Ltd
         %br
         Released under the MIT License.
+        %br
+        %br
+        = link_to "Report Bugs", "http://kennethkalmer.lighthouseapp.com/projects/11831-bind-dlz-on-rails", :target => '_blank'
+        \-
+        = link_to "Github", "http://github.com/kennethkalmer/bind-dlz-on-rails/tree", :target => '_blank'
