Templates seems to be fine now Implemented all major CRUD actions for templates Still needs specs :( Some stylsheet and JS tweaks Flashes can now be controlled bia JavaScript as well, needs refinement when hiding

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -16,10 +16,8 @@
           %li
             = link_to "Zones", zones_path
           %li
-            = link_to "Templates", templates_path
-          /
-            %li
-              Logs
+            = link_to "Templates", zone_templates_path
+          / Logs
           %li
             = link_to "Users", users_path
           %li
