--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -76,6 +76,9 @@ div.padded {
 table.grid {
     width: 400px;
 }
+table.gridwide {
+    width: 100%;
+}
 .small {
     font-size: 90%;
 }
@@ -90,7 +93,7 @@ table.grid {
 }
 .underline {
     border-bottom: 1px solid #777;
-    margin-top: 10px;
+    margin: 10px 0 5px 0;
 }
 a img {
     border: none;
@@ -134,6 +137,9 @@ input {
 }
 .fieldWithErrors input {
     border: 1px solid #F66;
+}
+input.nb {
+    border: none;
 }
 
 ul.start {
