--- a/app/views/zones/new.html.haml
+++ b/app/views/zones/new.html.haml
@@ -38,47 +38,55 @@
   %p &nbsp;
   %table.grid
     %tr
-      %td Domain name
+      %td{:width => "300"} Domain name
       %td= f.text_field :name
       %td
         = prototip_help_icon('help-domain')
     %tr
-      %td Primary name server
-      %td= f.text_field :primary_ns
-      %td
-        = prototip_help_icon('help-primary-ns')
+      %td Zone Template
+      %td= collection_select( :zone_template, :id, @zone_templates, :id, :name, :include_blank => true )
+    = observe_field :zone_template_id, :function =>"if(value == \"\") $('no-template-input').show(); else $('no-template-input').hide()", :on => 'select'
+    
+  #no-template-input
+    %table.grid
+      %tr
+        %td{:width => "300"} Primary name server
+        %td= f.text_field :primary_ns
+        %td
+          = prototip_help_icon('help-primary-ns')
+      %tr
+        %td Contact
+        %td= f.text_field :contact
+        %td
+          = prototip_help_icon('help-contact')
+      %tr
+        %td Refresh
+        %td
+          = f.text_field :refresh, :size => 6
+          = prototip_help_icon('help-refresh')
+        %td &nbsp;
+
+      %tr
+        %td Retry
+        %td
+          = f.text_field :retry, :size => 6
+          = prototip_help_icon('help-retry')
+        %td &nbsp;
+      %tr
+        %td Expire
+        %td
+          = f.text_field :expire, :size => 6
+          = prototip_help_icon('help-expire')
+        %td &nbsp;
+      %tr
+        %td Minimum
+        %td
+          = f.text_field :minimum, :size => 6
+          = prototip_help_icon('help-minimum')
+        %td &nbsp;
+  %table.grid
     %tr
-      %td Contact
-      %td= f.text_field :contact
-      %td
-        = prototip_help_icon('help-contact')
-    %tr
-      %td Refresh
-      %td
-        = f.text_field :refresh, :size => 6
-        = prototip_help_icon('help-refresh')
-      %td &nbsp;
-        
-    %tr
-      %td Retry
-      %td
-        = f.text_field :retry, :size => 6
-        = prototip_help_icon('help-retry')
-      %td &nbsp;
-    %tr
-      %td Expire
-      %td
-        = f.text_field :expire, :size => 6
-        = prototip_help_icon('help-expire')
-      %td &nbsp;
-    %tr
-      %td Minimum
-      %td
-        = f.text_field :minimum, :size => 6
-        = prototip_help_icon('help-minimum')
-      %td &nbsp;
-    %tr
-      %td.right= link_to "Cancel", zones_path
+      %td.right{:width => "300"}= link_to "Cancel", zones_path
       %td= submit_tag "Save"
       %td &nbsp;
 
