--- a/app/views/zones/_record.html.haml
+++ b/app/views/zones/_record.html.haml
@@ -11,4 +11,4 @@
     = record.data
   %td
     = link_to image_tag('database_edit.png'), edit_zone_record_path( record.zone, record )
-    = link_to image_tag('database_delete.png'), zone_record_path( @zone ), :method => :delete
+    = link_to image_tag('database_delete.png'), zone_record_path( record.zone, record ), :method => :delete, :confirm => "Are you sure?"
