--- a/app/views/zones/_zone.html.haml
+++ b/app/views/zones/_zone.html.haml
@@ -3,5 +3,5 @@
     = link_to zone.name, zone_path( zone )
   %td &nbsp;
   %td
-    = link_to image_tag('database_edit.png'), :action => 'edit', :id => zone.id
-    = link_to image_tag('database_delete.png'), { :action => 'destroy', :id => zone.id }, :method => :delete, :confirm => 'Are you sure?'
+    = link_to image_tag('database_edit.png'), edit_zone_path( zone )
+    = link_to image_tag('database_delete.png'), zone_path( zone ), :method => :delete, :confirm => 'Are you sure?'
