Searching works, but currently only on zones. [#2 state:open]

--- a/app/views/search/results.html.haml
+++ b/app/views/search/results.html.haml
@@ -5,4 +5,4 @@
 
 - unless @zones.blank?
   - for zone in @zones do
-    = link_to zone.name, zone_path( @zone )
+    = link_to zone.name, zone_path( zone )
