--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,9 +1,25 @@
 %h2.underline Users
 
+%div{ :style => "display: none;" }
+  #new-user
+    Creates a new user
+  #active-user
+    This is an active user
+  #suspended-user
+    This user is currently suspended
+  #edit-user
+    Edit this user's details
+  #suspend-user
+    Suspend this user
+  #reactivate-user
+    Re-activates this user
+  #delete-user
+    Delete this user from the system
+
 %table.grid
   %tr
     %td{ :colspan => 4 }
-      = link_to image_tag('user_add.png'), new_user_path
+      = link_to prototip_info_icon('user_add.png', 'new-user'), new_user_path
       = link_to 'New user', new_user_path
   = render :partial => 'user', :collection => @users
 
