--- a/app/views/templates/index.html.haml
+++ b/app/views/templates/index.html.haml
@@ -1,8 +1,16 @@
 %h1.underline Zone Templates
 
+%div{ :style => "display: none;" }
+  #new-template
+    Add a new zone template
+  #edit-template
+    Edit this zone template's information
+  #delete-template
+    Delete this zone template
+
 %table.grid
   %tr
     %td
-      = link_to image_tag('table_add.png'), new_zone_template_path
+      = link_to prototip_info_icon('table_add.png', 'new-template'), new_zone_template_path
       = link_to 'New template', new_zone_template_path
   = render :partial => 'zone_template', :collection => @zone_templates
