--- a/app/views/zones/index.html.haml
+++ b/app/views/zones/index.html.haml
@@ -1,6 +1,14 @@
+%div{ :style => "display: none" }
+  #new-zone
+    Adds a new zone
+  #edit-zone
+    Edit the details of this zone
+  #delete-zone
+    Delete this zone from the system
+
 %ul.start
   %li
-    = link_to image_tag('database_add.png'), new_zone_path
+    = link_to prototip_info_icon('database_add.png', 'new-zone'), new_zone_path
     = link_to "Add new zone", new_zone_path
 
 %h1.underline
