--- a/app/views/zones/_record.html.haml
+++ b/app/views/zones/_record.html.haml
@@ -1,4 +1,11 @@
-%tr
+%div{ :style => "display: none;" } 
+  %div{ :id => "record-template-edit-#{record.id}" }
+    Edit this record's details
+  %div{ :id => "record-template-delete-#{record.id}" }
+    Delete this record
+
+%tr[ record, :marker ]
+%tr[ record, :show ]
   %td
     = record.host
   %td
@@ -10,5 +17,19 @@
   %td
     = record.data
   %td
-    = prototip_info_icon('database_edit.png', 'record-template-edit')
-    = link_to prototip_info_icon('database_delete.png', 'record-template-delete'), zone_record_path( record.zone, record ), :method => :delete, :confirm => "Are you sure?"
+    = link_to_function prototip_info_icon('database_edit.png', "record-template-edit-#{record.id}"), "editRecord(#{record.id}, '#{record.type.downcase}')"
+    = link_to prototip_info_icon('database_delete.png', "record-template-delete-#{record.id}"), zone_record_path( record ), :method => :delete, :confirm => "Are you sure?"
+
+%tr[ record, :edit ]{ :style => "display: none;" }
+  - remote_form_for( :record, record, :url => zone_record_path( record ), :html => { :method => :put } ) do |f|
+    %td= f.text_field :host, :size => 2
+    %td= f.text_field :ttl, :size => 3
+    %td= record.type
+    - if record.type.downcase == 'mx'
+      %td= f.text_field :priority, :size => 2
+    - else
+      %td= record.priority
+    %td= f.text_field :data, :size => 15
+    %td
+      = image_submit_tag "table_save.png", { :class => 'nb' }
+      = link_to_function image_tag("cancel.png"), "hideRecord(#{record.id}, '#{record.type.downcase}')"
