--- a/app/views/zones/show.html.haml
+++ b/app/views/zones/show.html.haml
@@ -49,8 +49,8 @@
   %table.grid
     %tr
       %td{ :colspan => "6" }
-        = link_to prototip_info_icon('database_add.png', 'record-template-new'), new_zone_record_path
-        = link_to "New record", new_zone_record_path
+        = link_to prototip_info_icon('database_add.png', 'record-template-new'), new_zone_record_path( @zone )
+        = link_to "New record", new_zone_record_path( @zone )
     %tr
       %td.small Hostname
       %td.small TTL
