Fixed the suspend link in the user's view. [#18 state:open]

--- a/app/views/users/_user.html.haml
+++ b/app/views/users/_user.html.haml
@@ -10,7 +10,7 @@
   %td
     = link_to prototip_info_icon('user_edit.png', 'edit-user'), edit_user_path( user )
     - unless user.suspended?
-      = link_to prototip_info_icon('user_suspend.png', 'suspend-user'), suspend_user_path( user )
+      = link_to prototip_info_icon('user_suspend.png', 'suspend-user'), suspend_user_path( user ), :method => :put
     - else
-      = link_to prototip_info_icon('user_go.png', 'reactivate-user'), unsuspend_user_path( user )
-    = link_to prototip_info_icon('user_delete.png', 'delete-user'), user_path( user ), :method => :delete
+      = link_to prototip_info_icon('user_go.png', 'reactivate-user'), unsuspend_user_path( user ), :method => :put
+    = link_to prototip_info_icon('user_delete.png', 'delete-user'), purge_user_path( user ), :method => :delete
