--- a/app/views/zones/_record.html.haml
+++ b/app/views/zones/_record.html.haml
@@ -21,7 +21,7 @@
     = link_to prototip_info_icon('database_delete.png', "record-template-delete-#{record.id}"), zone_record_path( record.zone, record ), :method => :delete, :confirm => "Are you sure?"
 
 %tr[ record, :edit ]{ :style => "display: none;" }
-  - remote_form_for( :record, record, :url => zone_record_path(record.zone, record), :html => { :method => :put } ) do |f|
+  - remote_form_for( :record, record, :url => formatted_zone_record_path(record.zone, record, :js), :html => { :method => :put }) do |f|
     %td= f.text_field :host, :size => 2
     %td= f.text_field :ttl, :size => 3
     %td= record.type
